# cargo-samply

./: .gitignore  .markdownlint.json  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  cliff.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.opencode/: oh-my-opencode.json
.opencode/command/: prerelease.md  release.md
.zed/: settings.json
openspec/: project.md
openspec/changes/archive/2025-12-27-improve-robustness-and-ux/: design.md  proposal.md
openspec/changes/archive/2025-12-27-improve-robustness-and-ux/specs/cli/: spec.md
openspec/changes/archive/2025-12-27-improve-robustness-and-ux/specs/discovery/: spec.md
openspec/changes/improve-robustness-and-ux/: tasks.md
openspec/changes/improve-robustness-and-ux/specs/cli/: spec.md
openspec/changes/improve-robustness-and-ux/specs/execution/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/discovery/: spec.md
openspec/specs/execution/: spec.md
src/: cli.rs  error.rs  lib.rs  main.rs  util.rs
tests/: another.trycmd  args.trycmd  bench-flag.trycmd  bench-suffix.trycmd  bench.trycmd  bevy-dylib.trycmd  cli_tests.rs  criterion.trycmd  dry-run.trycmd  dylib.trycmd  examples.trycmd  list-targets.trycmd  multiple.trycmd  newbin.trycmd  newbin2.trycmd  no-profile-inject.trycmd  samply-args.trycmd  test-target.trycmd  workspace.trycmd  workspace_filter.trycmd
tests/args.in/: Cargo.toml
tests/args.in/src/: main.rs
tests/args/src/: main.rs
tests/bench-flag.in/: Cargo.toml
tests/bench-flag.in/benches/: throughput.rs
tests/bench-suffix.in/: Cargo.toml
tests/bench-suffix.in/benches/: column_sum.rs
tests/bench-suffix.in/src/: lib.rs
tests/bench.in/src/: lib.rs
tests/bevy-dylib.in/: Cargo.toml
tests/bevy-dylib.in/src/: main.rs
tests/criterion.in/: Cargo.toml
tests/criterion.in/benches/: criterion_capture.rs
tests/criterion.in/src/: lib.rs
tests/dry-run.in/: Cargo.toml
tests/dylib.in/: Cargo.toml  README.md  verify_dynamic_linking.sh
tests/dylib.in/src/: main.rs
tests/examples.in/: Cargo.toml
tests/multiple.in/: Cargo.toml
tests/multiple.in/src/: first.rs  second.rs
tests/newbin.out/: Cargo.toml
tests/no-profile-inject.in/: Cargo.toml
tests/no-profile-inject.in/src/another/: main.rs
tests/samply-args.in/: Cargo.toml
tests/skip-on-windows/: newbin2.trycmd
tests/skip-on-windows/newbin2.in/: Cargo.toml
tests/test-target.in/: Cargo.toml
tests/test-target.in/src/: main.rs
tests/test-target.in/tests/: integration_test.rs
tests/testpackage/: Cargo.toml
tests/testpackage/src/another/: main.rs
tests/testpackage_nodefault/: Cargo.toml
tests/workspace.in/: Cargo.toml
tests/workspace.in/examples/: example1.rs  example2.rs
tests/workspace.in/src/: bin1.rs  bin2.rs
tests/workspace_filter.in/: Cargo.toml
tests/workspace_filter.in/pkg-a/: Cargo.toml
tests/workspace_filter.in/pkg-a/src/: main.rs
tests/workspace_filter.in/pkg-b/: Cargo.toml
tests/workspace_filter.in/pkg-b/src/: main.rs
