[package]
name = "cargo-samply"
edition = "2021"
version = "0.4.1"
license = "MIT"
authors = ["Philipp Polterauer <philipp.polterauer@gmail.com>"]
description = "A cargo subcommand to automate the process of running samply for project binaries"
readme = "README.md"
repository = "https://github.com/PhilippPolterauer/cargo-samply.git"
homepage = "https://github.com/PhilippPolterauer/cargo-samply.git"
documentation = "https://docs.rs/cargo-samply"
keywords = ["cargo", "profiling", "samply", "performance", "subcommand"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "cargo-samply"
path = "src/main.rs"

[[bin]]
name = "fake-samply"
path = "tests/bin/fake_samply.rs"

[lib]
name = "cargo_samply"
path = "src/lib.rs"

[dependencies]
cargo_toml = "0.22.3"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
toml = { version = "0.9.11" }
clap-cargo = "0.17.0"
cargo_metadata = "0.23"
ocli = "0.3.0"
shell-words = "1.1"
which = "8.0.0"

[profile.samply]
inherits = "release"
debug = true

[dev-dependencies]
regex = "1.12.2"
trycmd = "0.15"
which = { version = "8.0.0", features = ["regex"] }
tempfile = "3"
