[package]
name = "workspace-package"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bin1"
path = "src/bin1.rs"

[[bin]]
name = "bin2"
path = "src/bin2.rs"

[[example]]
name = "example1"
path = "examples/example1.rs"

[[example]]
name = "example2"
path = "examples/example2.rs"

[profile.samply]
inherits = "release"
debug = true
